# Scalar

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  Package.swift  README.md  ScalarEngine.pc  swift-wrapper.sh  vcpkg.json
Sources/Scalar/: main.swift
Sources/ScalarEngine/: Package.swift  module.modulemap
include/: EngineC.h
modules/: module.modulemap
src/engine/: Engine.cpp  Engine.hpp
src/game/: main.cpp
swift/: main.swift
